--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -61,127 +61,46 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fugit aut architecto id impedit, mollitia illo tempore, eum, explicabo error ullam natus voluptates modi provident sunt sit quas ex officia.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Almoço
-                </div>
-                <div class="col-4">
-                    Comi arroz, feijão, carne assada e salada. Sobremesa bolo de banana.
-                </div>
-                <div class="col-2">
-                    650kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="alimentos_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-        </div>
+            <br>
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Tipo de Refeição</th>
+                <th scope="col">Detalhes</th>
+                <th scope="col">Calorias (kcal)</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Café da manhã</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="alimentos_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Almoço</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>1200</td>
+                    <td><a class="icon-edit" href="alimentos_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Lanche</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="alimentos_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br><br>
         <div class="add-ref">
             <a type="button" class="btn btn-secondary" href="alimentos_edit.html">ADICIONAR REFEIÇÃO</a>
         </div>
