--- a/HT/medidas_home.html
+++ b/HT/medidas_home.html
@@ -61,88 +61,60 @@
                 </ul>
             </div>
         </nav>
-
-        <div class="container">
-            <div class="row" id="item-list">
-                <div class="col">
-                    Data
-                </div>
-                <div class="col">
-                    Braço (cm)
-                </div>
-                <div class="col">
-                    Peito (cm)
-                </div>
-                <div class="col">
-                    Cintura (cm)
-                </div>
-                <div class="col">
-                    Quadril (cm)
-                </div>
-                <div class="col">
-                    Coxa (cm)
-                </div>
-                <div class="col">
-                    Paturrilha (cm)
-                </div>
-                <div class="col">
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col">
-                    22/05/2020
-                </div>
-                <div class="col">
-                    40
-                </div>
-                <div class="col">
-                    90
-                </div>
-                <div class="col">
-                    65
-                </div>
-                <div class="col">
-                    90
-                </div>
-                <div class="col">
-                    65
-                </div>
-                <div class="col">
-                    40
-                </div>
-                <div class="col">
-                    <a class="icon-edit-ref" href="medidas_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col">
-                    22/05/2020
-                </div>
-                <div class="col">
-                    40
-                </div>
-                <div class="col">
-                    90
-                </div>
-                <div class="col">
-                    65
-                </div>
-                <div class="col">
-                    90
-                </div>
-                <div class="col">
-                    65
-                </div>
-                <div class="col">
-                    40
-                </div>
-                <div class="col">
-                    <a class="icon-edit-ref" href="medidas_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-        </div>
+        <br>
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Braço (cm)</th>
+                <th scope="col">Peito (cm)</th>
+                <th scope="col">Cintura (cm)</th>
+                <th scope="col">Quadril (cm)</th>
+                <th scope="col">Coxa (cm)</th>
+                <th scope="col">Panturrilha (cm)</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br><br>
         <div class="add-ref">
-            <a type="button" class="btn btn-secondary" href="exercicios_edit.html">ADICIONAR MEDIDAS CORPORAIS</a>
+            <a type="button" class="btn btn-secondary" href="medidas_edit.html">ADICIONAR MEDIDAS CORPORAIS</a>
         </div>
     </div>
 
