--- a/HT/pressao_home.html
+++ b/HT/pressao_home.html
@@ -61,35 +61,35 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
-            <div class="row" id="item-list">
-                <div class="col">
-                    Data
-                </div>
-                <div class="col">
-                    Sistólica
-                </div>
-                <div class="col">
-                    Diástólica
-                </div>
-                <div class="col">
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col">
-                    22/05/2020
-                </div>
-                <div class="col">
-                    17
-                </div>
-                <div class="col">
-                    8
-                </div>
-                <div class="col">
-                    <a class="icon-edit-ref" href="pressao_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-        </div>
+        <br>
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Diastólica</th>
+                <th scope="col">Sistólica</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>16</td>
+                    <td>8</td>
+                    <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">23/05/2020</th>
+                    <td>16</td>
+                    <td>9</td>
+                    <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br><br>
         <div class="add-ref">
             <a type="button" class="btn btn-secondary" href="pressao_edit.html">ADICIONAR PRESSÃO ARTERIAL</a>
         </div>
