--- a/HT/exercicios_home.html
+++ b/HT/exercicios_home.html
@@ -61,42 +61,62 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Caminhada
-                </div>
-                <div class="col-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fugit aut architecto id impedit, mollitia illo tempore, eum, explicabo error ullam natus voluptates modi provident sunt sit quas ex officia.
-                </div>
-                <div class="col-2">
-                    320kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="exercicios_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-            <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
-                </div>
-                <div class="col-2">
-                    Musculação
-                </div>
-                <div class="col-4">
-                    Treino de pernas 30 minutos.
-                </div>
-                <div class="col-2">
-                    225kcal
-                </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="exercicios_edit.html"><i class="far fa-edit"></i></a>
-                </div>
-            </div>
-        </div>
+        <br>
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Tipo de Exercício</th>
+                <th scope="col">Detalhes</th>
+                <th scope="col">Calorias (kcal)</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Corrida</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem iusto velit iste odit voluptatibus natus, voluptate, ad reprehenderit laborum nemo repellat repudiandae quos, earum eaque iure dignissimos fugiat atque ut./td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">20/05/2020</th>
+                    <td>Musculação</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>210</td>
+                    <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Bike</td>
+                    <td>30 minutos de bicicleta até o trabalho.</td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Pilates</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>Yoga</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>350</td>
+                    <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br><br>
         <div class="add-ref">
             <a type="button" class="btn btn-secondary" href="exercicios_edit.html">ADICIONAR ATIVIDADE FÍSICA</a>
         </div>
