--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
         <br>
-    <div style="overflow-x: auto;"></div>
+    <div class="table-wrap">
         <table class="table">
             <thead class="thead-light">
                 <tr>
