--- a/HT/medidas_home.html
+++ b/HT/medidas_home.html
@@ -61,56 +61,58 @@
         </div>
     </nav>
     <br>
-    <table class="table">
-        <thead class="thead-light">
-            <tr>
-            <th scope="col">Data</th>
-            <th scope="col">Braço (cm)</th>
-            <th scope="col">Peito (cm)</th>
-            <th scope="col">Cintura (cm)</th>
-            <th scope="col">Quadril (cm)</th>
-            <th scope="col">Coxa (cm)</th>
-            <th scope="col">Panturrilha (cm)</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">22/05/2020</th>
-                <td>30</td>
-                <td>90</td>
-                <td>65</td>
-                <td>90</td>
-                <td>60</td>
-                <td>40</td>
-                <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-                <th scope="row">22/05/2020</th>
-                <td>30</td>
-                <td>90</td>
-                <td>65</td>
-                <td>90</td>
-                <td>60</td>
-                <td>40</td>
-                <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-                <th scope="row">22/05/2020</th>
-                <td>30</td>
-                <td>90</td>
-                <td>65</td>
-                <td>90</td>
-                <td>60</td>
-                <td>40</td>
-                <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-wrap">
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Braço (cm)</th>
+                <th scope="col">Peito (cm)</th>
+                <th scope="col">Cintura (cm)</th>
+                <th scope="col">Quadril (cm)</th>
+                <th scope="col">Coxa (cm)</th>
+                <th scope="col">Panturrilha (cm)</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>30</td>
+                    <td>90</td>
+                    <td>65</td>
+                    <td>90</td>
+                    <td>60</td>
+                    <td>40</td>
+                    <td><a class="icon-edit" href="medidas_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <br><br><br>
     <div class="add-ref">
         <a type="button" class="btn btn-secondary" href="medidas_edit.html">ADICIONAR MEDIDAS CORPORAIS</a>
