--- a/HT/pressao_home.html
+++ b/HT/pressao_home.html
@@ -61,33 +61,35 @@
         </div>
     </nav>
     <br>
-    <table class="table">
-        <thead class="thead-light">
-            <tr>
-            <th scope="col">Data</th>
-            <th scope="col">Diastólica</th>
-            <th scope="col">Sistólica</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">22/05/2020</th>
-                <td>16</td>
-                <td>8</td>
-                <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-                <th scope="row">23/05/2020</th>
-                <td>16</td>
-                <td>9</td>
-                <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-wrap">
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Diastólica</th>
+                <th scope="col">Sistólica</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>16</td>
+                    <td>8</td>
+                    <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">23/05/2020</th>
+                    <td>16</td>
+                    <td>9</td>
+                    <td><a class="icon-edit" href="pressao_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <br><br><br>
     <div class="add-ref">
         <a type="button" class="btn btn-secondary" href="pressao_edit.html">ADICIONAR PRESSÃO ARTERIAL</a>
