--- a/HT/peso_home.html
+++ b/HT/peso_home.html
@@ -61,30 +61,32 @@
         </div>
     </nav>
     <br>
-    <table class="table">
-        <thead class="thead-light">
-            <tr>
-            <th scope="col">Data</th>
-            <th scope="col">Peso (Kg)</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">22/05/2020</th>
-                <td>55.6</td>
-                <td><a class="icon-edit" href="peso_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-                <th scope="row">29/05/2020</th>
-                <td>56.2</td>
-                <td><a class="icon-edit" href="peso_edit.html"><i class="far fa-edit"></i></a></td>
-                <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-wrap">
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Peso (Kg)</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">22/05/2020</th>
+                    <td>55.6</td>
+                    <td><a class="icon-edit" href="peso_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+                <tr>
+                    <th scope="row">29/05/2020</th>
+                    <td>56.2</td>
+                    <td><a class="icon-edit" href="peso_edit.html"><i class="far fa-edit"></i></a></td>
+                    <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <br><br><br>
     <div class="add-ref">
         <a type="button" class="btn btn-secondary" href="peso_edit.html">ADICIONAR PESO</a>
