--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -103,7 +103,7 @@
     </div>   
     <br><br><br>
     <div class="add-ref">
-        <a type="button" class="btn btn-secondary" href="alimentos_edit.html">ADICIONAR REFEIÇÃO</a>
+        <a type="button" class="btn btn-secondary" id="botao" href="alimentos_edit.html">ADICIONAR REFEIÇÃO</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
