--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -63,8 +63,10 @@
 
         <section class="section-dash">
             <div id="conjunto-peso-dash">
-                <p id="peso-dash">1.6 Kg</p>
-                <p id="texto-peso-dash">adquiridos em Maio</p>
+                <div id="circulo">
+                    <p id="peso-dash">1.6 Kg</p>
+                    <p id="texto-peso-dash">adquiridos em Maio</p>
+                </div>
             </div>
             <div class="section-estatistica">
                 <div class="estatistica-dash">
