--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -21,9 +21,9 @@
 <body>
         <hearder>
             <div id="logo">
-                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="400px">
+                <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
             </div>
-            <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
+            <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
         </hearder>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -55,7 +55,7 @@
                     <a class="nav-link" href="pressao_home.html"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                    <a class="nav-link" href="logout.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
                 </li>
                 </ul>
             </div>
