--- a/HT/login.html
+++ b/HT/login.html
@@ -21,9 +21,9 @@
     <div id="container-fluid">
         <hearder>
             <div id="logo">
-                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="400px">
+                <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
             </div>
-            <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
+            <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
         </hearder>
 
             <div class="container">
