--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -21,11 +21,11 @@
     <div class="container-fluid">
         <hearder>
             <div id="logo">
-                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="400px">
+                <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
             </div>
-            <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
+            <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
         </hearder>
-
+        <hr>
         <form class="main-form" method="post" id="formulario_cadastro">
             <fieldset class="form-group">
                 <legend>Informações Pessoais</legend>
