--- a/HT/peso_edit.html
+++ b/HT/peso_edit.html
@@ -19,61 +19,56 @@
     
     </head>
 <body>
-    <hearder>
-        <div id="logo">
-            <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
-        </div>
-        <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
-    </hearder>
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="dashboard.html"></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo_HT.png" alt="imagem logo" width="120px">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="dashboard.html"><i class="fas fa-home"></i>Home</a>
+                <a class="nav-link" href="dashboard.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cadastro.html"><i class="fas fa-user-cog"></i>Perfil</a>
+                <a class="nav-link" href="cadastro.html">Perfil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
+                <a class="nav-link" href="alimentos_home.html">Alimentação</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
+                <a class="nav-link" href="exercicios_home.html">Exercícios Físicos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="medidas_home.html"><i class="fas fa-pencil-ruler"></i>Medidas</a>
+                <a class="nav-link" href="medidas_home.html">Medidas Corporais</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="peso_home.html"><i class="fas fa-weight"></i>Peso</a>
+                <a class="nav-link" href="peso_home.html">Peso</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pressao_home.html"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
+                <a class="nav-link" href="pressao_home.html">Pressão Arterial</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="logout.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                <a class="nav-link" href="logout.html">Logout</a>
             </li>
             </ul>
         </div>
     </nav>
-
-    <form class="main-form" method="post" id="formulario_edit_ref">
-        <fieldset>
-            <legend>Edite seu peso</legend>
-            <div class="form-group">
-                <label class="textlabel">Peso (Kg)</label>
-                <input id="pesoInput" name="peso" type="number" class="form-control" required>
-            </div>
-        </fieldset>
-    </form>
-    <div class="add-ref">
-        <a type="button" class="btn btn-secondary" href="peso_home.html">ADICIONAR PESO</a>
+    <div class="container-fluid padding"> 
+        <form class="main-form topo" method="post" id="formulario_edit_ref">
+            <fieldset>
+                <legend>Edite seu peso</legend>
+                <div class="form-group">
+                    <label class="textlabel">Peso (Kg)</label>
+                    <input id="pesoInput" name="peso" type="number" class="form-control" required>
+                </div>
+            </fieldset>
+        </form>
+        <div class="add-ref">
+            <a href="peso_home.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR PESO</button></a>
+        </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
