--- a/HT/pressao_home.html
+++ b/HT/pressao_home.html
@@ -19,49 +19,43 @@
     
     </head>
 <body>
-    <hearder>
-        <div id="logo">
-            <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
-        </div>
-        <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
-    </hearder>
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="dashboard.html"></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo_HT.png" alt="imagem logo" width="120px">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="dashboard.html"><i class="fas fa-home"></i>Home</a>
+                <a class="nav-link" href="dashboard.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cadastro.html"><i class="fas fa-user-cog"></i>Perfil</a>
+                <a class="nav-link" href="cadastro.html">Perfil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
+                <a class="nav-link" href="alimentos_home.html">Alimentação</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
+                <a class="nav-link" href="exercicios_home.html">Exercícios Físicos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="medidas_home.html"><i class="fas fa-pencil-ruler"></i>Medidas</a>
+                <a class="nav-link" href="medidas_home.html">Medidas Corporais</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="peso_home.html"><i class="fas fa-weight"></i>Peso</a>
+                <a class="nav-link" href="peso_home.html">Peso</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="pressao_home.html"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
+                <a class="nav-link" href="pressao_home.html">Pressão Arterial</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="logout.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                <a class="nav-link" href="logout.html">Logout</a>
             </li>
             </ul>
         </div>
     </nav>
-    <br>
-    <div class="table-wrap">
+    <div class="table-wrap topo">
         <table class="table">
             <thead class="thead-light">
                 <tr>
@@ -92,7 +86,7 @@
     </div>
     <br><br><br>
     <div class="add-ref">
-        <a type="button" class="btn btn-secondary" href="pressao_edit.html">ADICIONAR PRESSÃO ARTERIAL</a>
+        <a href="pressao_edit.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR PRESSÃO ARTERIAL</button></a>
     </div>
 
 
