--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -19,72 +19,84 @@
 
 </head>
 <body>
-        <hearder>
-            <div id="logo">
-                <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
-            </div>
-            <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
-        </hearder>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo_HT.png" alt="imagem logo" width="120px">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="dashboard.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="cadastro.html">Perfil</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="alimentos_home.html">Alimentação</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="exercicios_home.html">Exercícios Físicos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="medidas_home.html">Medidas Corporais</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="peso_home.html">Peso</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="pressao_home.html">Pressão Arterial</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="logout.html">Logout</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
 
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="dashboard.html"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="dashboard.html"><i class="fas fa-home"></i>Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cadastro.html"><i class="fas fa-user-cog"></i>Perfil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="medidas_home.html"><i class="fas fa-pencil-ruler"></i>Medidas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="peso_home.html"><i class="fas fa-weight"></i>Peso</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pressao_home.html"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="logout.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
-                </li>
-                </ul>
-            </div>
-        </nav>
+    <figure>
+        <div class="container-fluid">
+            <img src="images/health.jpg" alt="Imagem saudavel" width="100%">
+        <div>
+    </figure>
 
-        <section class="section-dash">
-            <div id="conjunto-peso-dash">
-                <div id="circulo">
-                    <p id="peso-dash">1.6 Kg</p>
-                    <p id="texto-peso-dash">adquiridos em Maio</p>
-                </div>
+    <div class="container-fluid padding">
+        <div class="row peso text-center">
+            <div class="col-12">
+            <h1 class="display-4">1.4 kg</h1>
+            <div class="col-12">
+                <p class="lead">perdidos no mês de Maio</p>
             </div>
-            <div class="section-estatistica">
-                <div class="estatistica-dash">
-                    <p>Tempo de exercício neste mês: 120 minutos</p>
-                </div>
-                <div class="estatistica-dash">
-                    <p>Média de atividade por dia: 20 minutos</p>
-                </div>
-                <div class="estatistica-dash">
-                    <p>Média de calorias diárias: 1425 calorias</p>
-                </div>
             </div>
-        </section>
+        </div>
+    </div>
 
-        <footer>
-            <hr>
-            &copy; Desenvolvido por Cynthia Oka 2020
-        </footer>
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <i class="fas fa-running"></i>
+            <h3>ATIVIDADE FÍSICA</h3>
+            <p class="lead">120 minuitos de exercícios em Maio.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <i class="fas fa-utensils"></i>
+            <h3>CALORIAS</h3>
+            <p class="lead">Média de 1520 calorias ingeridas por dia.</p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <i class="fas fa-heartbeat"></i>
+            <h3>PRESSÃO</h3>
+            <p class="lead">Sua presão está dentro de um valor saudável.</p>
+          </div>
+        </div>
+    </div>
+
+    <footer>
+        <hr>
+        &copy; Desenvolvido por Cynthia Oka 2020
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
